# csvlib

./: .gitignore  CMakeLists.txt  README.md
csv_tests/: csv_tests.mm
csv_tests/resources/: classification.csv  ford_escort.csv  korean-small.csv  korean.csv  simple_csv_utf8_bom.tsv  small_sample_equal_not_equal_bom.tsv
csvlib/: CMakeLists.txt  main.cpp
csvlib.xcodeproj/: project.pbxproj
csvlib.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
csvlib.xcodeproj/xcshareddata/xcschemes/: csv_command_line.xcscheme
csvlib.xcodeproj/xcuserdata/dford.xcuserdatad/xcschemes/: Tabula Rasa.xcscheme  csv_tests.xcscheme  xcschememanagement.plist
csvlib/csv/: parser.cpp  parser.hpp
csvlib/csv/datasource/: IDataSource.hpp
csvlib/csv/datasource/icu/: DataSource.cpp  DataSource.hpp  Encoding.hpp
csvlib/csv/datasource/utf8/: DataSource.cpp  DataSource.hpp
csvlib/csv/objc/: DSFCSVParser.h  DSFCSVParser.mm
tools/Tabula Rasa/: AppDelegate.swift  Document.swift  Info.plist  Tabula-Rasa-Bridging-Header.h  TabulaRasaData.swift  TabulaRasaTableViewController.swift  TabulaRasaTableViewController.xib
tools/Tabula Rasa/Assets.xcassets/AppIcon.appiconset/: Contents.json
tools/Tabula Rasa/Base.lproj/: Document.xib  MainMenu.xib
tools/Tabula Rasa/DFSearchKit/: DFSearchIndex.swift
tools/csv_command_line/: CMakeLists.txt  command_line.cpp  command_line.hpp  main.cpp
